force-app/main/default/objects/RD_Oulet_Gasket_Part_Number__c/RD_Oulet_Gasket_Part_Number__c.object-meta.xml
<CustomObject>
    <description>This is a Duplicate table, not referenced</description>
    <label>RD Oulet Gasket Part Number</label>
    <nameField>
        <label>RD Oulet Gasket Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Oulet Gasket Part Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>