force-app/main/default/objects/RD_Oulet_Gasket_Part_Number__c/fields/DiscThckUL__c.field-meta.xml
<CustomField>
    <fullName>DiscThckUL__c</fullName>
    <label>DiscThckUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>