force-app/main/default/objects/RD_Oulet_Gasket_Part_Number__c/fields/MCOG__c.field-meta.xml
<CustomField>
    <fullName>MCOG__c</fullName>
    <label>MCOG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>