force-app/main/default/objects/RD_Oulet_Gasket_Part_Number__c/fields/Thickness__c.field-meta.xml
<CustomField>
    <fullName>Thickness__c</fullName>
    <label>Thickness</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>