force-app/main/default/objects/RD_Oulet_Gasket_Part_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>DSCVAR__c</columns>
    <columns>SZC__c</columns>
    <columns>MCOG__c</columns>
    <columns>TempLL__c</columns>
    <columns>TempUL__c</columns>
    <columns>SourceCode__c</columns>
    <columns>STC__c</columns>
    <columns>DiscThckLL__c</columns>
    <columns>DiscThckUL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>